cursive-bootstrap/tests/ui/E-SEM/E-SEM-2851.cursive
// RUN: compile-fail
// DIAG: E-SEM-2851
// SPEC: 6.9
// DESC: Invalid predicate in foreign contract

extern "C" {
    @foreign_assumes(unknown_function()) //~ ERROR E-SEM-2851
    procedure external_fn() -> i32
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
